kubernetes/onlyoffice/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: onlyoffice
  namespace: homelab
spec:
  selector:
    app: onlyoffice
  ports:
  - port: 80
    targetPort: 80
